--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/zebcoding/SuperSteve/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/zebcoding/SuperSteve/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/zebcoding/SuperSteve/zipball/master" class="zip"><em>download</em> .ZIP</a><a class="zip"><em>download</em> .JAR</a><a href="https://github.com/zebcoding/SuperSteve/tarball/master" class="tgz"><em>download</em> .TGZ</a>
         </span>
       </section>
 
@@ -72,12 +72,11 @@
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/zebcoding">zebcoding</a> can be found on <a href="https://github.com/zebcoding/SuperSteve">GitHub</a></p>
+            <p>this project by the <a href="https://github.com/zebcoding">zebcoding</a> team can be found on <a href="https://github.com/zebcoding/SuperSteve">GitHub</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
         <span class="octocat"></span>
       </footer>
 
