--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/zebcoding/SuperSteve/zipball/master" class="zip"><em>download</em> .ZIP</a><a class="zip"><em>download</em> .JAR</a><a href="https://github.com/zebcoding/SuperSteve/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/zebcoding/SuperSteve/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/zebcoding/SuperSteve/releases/download/MC1.7.2/supersteve-1.7.2-10.12.2.1126-0.1.0a.jar" class="tgz"><em>download</em> .JAR</a>
         </span>
       </section>
 
